# lspcmd

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  RUST_REWRITE.md  TEST_COVERAGE.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py  split_lsp_spec.py  test-lspcmd-prompt.el  tool_selection_rules.md
.github/workflows/: ci.yml  update-homebrew.yml
crates/leta/: Cargo.toml
crates/leta-cache/: Cargo.toml
crates/leta-cache/src/: lib.rs
crates/leta-config/src/: config.rs  paths.rs
crates/leta-daemon/: Cargo.toml
crates/leta-daemon/src/: lib.rs  main.rs  pidfile.rs  profiling.rs  server.rs  session.rs
crates/leta-daemon/src/handlers/: calls.rs  files.rs  grep.rs  index.rs  mod.rs  refs.rs  rename.rs  resolve.rs  resolve_symbol.rs  session.rs  show.rs
crates/leta-fs/: Cargo.toml
crates/leta-fs/src/: text.rs
crates/leta-lsp/: Cargo.toml
crates/leta-lsp/examples/: test_message.rs
crates/leta-lsp/src/: capabilities.rs  client.rs  lib.rs  protocol.rs
crates/leta-output/: Cargo.toml
crates/leta-output/src/: formatters.rs
crates/leta-servers/: Cargo.toml
crates/leta-servers/src/: registry.rs
crates/leta-types/: Cargo.toml
crates/leta-types/src/: lib.rs  rpc.rs  symbol.rs
crates/leta/examples/: test_glob.rs
crates/leta/src/: main.rs
leta/: cache.py  cli.py
leta/daemon/: pidfile.py  rpc.py  server.py  session.py
leta/daemon/handlers/: base.py  calls.py  declaration.py  describe_session.py  files.py  grep.py  implementations.py  move_file.py  references.py  rename.py  resolve_symbol.py  show.py  shutdown.py  subtypes.py  supertypes.py
leta/lsp/: capabilities.py  client.py  protocol.py  types.py
leta/output/: formatters.py
leta/servers/: registry.py
leta/utils/: config.py  text.py
lspcmd/: cache.py  cli.py  daemon_cli.py
lspcmd/daemon/: mcp_server.py  pidfile.py  rpc.py  server.py  session.py
lspcmd/daemon/handlers/: __init__.py  base.py  calls.py  declaration.py  describe_session.py  files.py  grep.py  implementations.py  move_file.py  raw_lsp_request.py  references.py  rename.py  replace_function.py  resolve_symbol.py  restart_workspace.py  show.py  shutdown.py  subtypes.py  supertypes.py
lspcmd/lsp/: capabilities.py  client.py  protocol.py  types.py
lspcmd/output/: formatters.py
lspcmd/servers/: registry.py
lspcmd/utils/: config.py  text.py  uri.py
script/: corpus-test  format  install  integration-test  lint  split-integration-tests  unit-test
skills/leta/: SKILL.md
skills/lspcmd/: SKILL.md
test/: conftest.py  corpus_runner.py  test_cache.py  test_cli.py  test_config.py  test_disambiguation.py  test_formatters.py  test_integration.py  test_mcp.py  test_protocol.py  test_registry.py  test_text.py  test_uri.py
test/corpus/: CONVERSION_GUIDE.md  corpus_runner.py
test/corpus/cpp/: calls_excludes_stdlib.txt  calls_incoming.txt  calls_path.txt  grep_case_insensitive.txt  grep_case_sensitive.txt  grep_case_sensitive_no_match.txt  grep_multiple_files.txt  grep_pattern.txt  grep_with_docs.txt  grep_workspace_wide.txt  implementations_with_context.txt  mv_not_supported.txt  refs_basic.txt  resolve_symbol_ambiguous.txt  resolve_symbol_qualified.txt  show_class.txt  show_function.txt  show_with_context.txt  subtypes.txt
test/corpus/go/: calls_excludes_stdlib.txt  calls_include_non_workspace.txt  calls_incoming.txt  calls_outgoing.txt  calls_path_not_found.txt  declaration_not_supported.txt  errors.txt  grep.txt  grep_case_insensitive.txt  grep_case_sensitive_no_match.txt  grep_exclude_multiple.txt  grep_kind_function.txt  grep_pattern_functions.txt  implementations.txt  mv_not_supported.txt  refs.txt  rename.txt  resolve_symbol_ambiguous.txt  resolve_symbol_file_filter.txt  resolve_symbol_unique.txt  resolve_symbol_value_receiver.txt  show.txt  show_multiline_slice.txt  show_struct.txt  show_with_context.txt  subtypes.txt
test/corpus/java/: calls_excludes_stdlib.txt  calls_include_non_workspace.txt  calls_incoming.txt  calls_path_not_found.txt  grep_exclude.txt  grep_exclude_multiple.txt  grep_kind_class.txt  grep_kind_method.txt  grep_pattern.txt  grep_with_docs.txt  implementations_basic.txt  implementations_with_context.txt  refs_with_context.txt  rename.txt  resolve_symbol_ambiguous.txt  resolve_symbol_file_filter.txt  show_method.txt  show_multiline_list.txt  show_multiline_map.txt  show_with_context.txt
test/corpus/leta/: cli.txt
test/corpus/lua/: calls_not_supported.txt  declaration_not_supported.txt  grep_case_insensitive.txt  grep_case_sensitive.txt  grep_case_sensitive_no_match.txt  grep_exclude.txt  grep_exclude_multiple.txt  grep_workspace_wide.txt  implementations_with_context.txt  mv_not_supported.txt  resolve_symbol_ambiguous.txt  resolve_symbol_file_filter.txt  show_object.txt  show_with_context.txt
test/corpus/multi_language/: grep_python_classes.txt  grep_workspace_wide.txt  show_go_struct.txt
test/corpus/php/: calls_not_supported.txt  declaration_not_supported.txt  grep_case_sensitive.txt  grep_combined_filters.txt  grep_exclude.txt  grep_kind_interface.txt  grep_multiple_files.txt  grep_pattern.txt  grep_with_docs.txt  implementations_not_supported.txt  mv_not_supported.txt  refs_with_context.txt  resolve_symbol_ambiguous.txt  resolve_symbol_unique.txt  show_multiline_array.txt  subtypes_not_supported.txt  supertypes_not_supported.txt
test/corpus/python/: calls_include_non_workspace.txt  calls_path.txt  calls_path_not_found.txt  grep_all.txt  grep_case_insensitive.txt  grep_case_sensitive_no_match.txt  grep_combined_filters.txt  grep_exclude.txt  grep_kind_class.txt  grep_kind_function.txt  grep_pattern.txt  mv.txt  (+14 more)
test/integration/: conftest.py  test_cpp.py  test_go.py  test_java.py  test_lua.py  test_multi_language.py  test_php.py  test_python.py  test_ruby.py  test_rust.py  test_typescript.py  test_zig.py
test/unit/: conftest.py  test_config.py  test_disambiguation.py  test_formatters.py  test_protocol.py  test_registry.py  test_text.py  test_uri.py
tests/: conftest.py  test_cli.py  test_config.py  test_formatters.py  test_integration.py  test_text.py  test_uri.py
(+194 files in other folders)
