[workspace]
resolver = "2"
members = [
    "crates/leta",
    "crates/leta-daemon",
    "crates/leta-lsp",
    "crates/leta-types",
    "crates/leta-config",
    "crates/leta-cache",
    "crates/leta-servers",
    "crates/leta-output",
    "crates/leta-fs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anthropic"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# File system
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"
tempfile = "3.14"

# Caching
heed = "0.20"
blake3 = "1.5"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Collections
rustc-hash = "2.0"
dashmap = "6.1"

# Internal crates
leta-types = { path = "crates/leta-types" }
leta-config = { path = "crates/leta-config" }
leta-lsp = { path = "crates/leta-lsp" }
leta-cache = { path = "crates/leta-cache" }
leta-servers = { path = "crates/leta-servers" }
leta-output = { path = "crates/leta-output" }
leta-fs = { path = "crates/leta-fs" }
leta-daemon = { path = "crates/leta-daemon" }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
