[workspace]
resolver = "2"
members = [
    "crates/leta",
    "crates/leta-daemon",
    "crates/leta-lsp",
    "crates/leta-types",
    "crates/leta-config",
    "crates/leta-cache",
    "crates/leta-servers",
    "crates/leta-output",
    "crates/leta-fs",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
authors = ["Andreas Jansson"]
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/andreasjansson/leta"
homepage = "https://github.com/andreasjansson/leta"
description = "LSP Enabled Tools for Agents - fast semantic code navigation"

[workspace.dependencies]

# Internal crates
leta-types = { version = "0.10.0", path = "crates/leta-types" }
leta-config = { version = "0.10.0", path = "crates/leta-config" }
leta-lsp = { version = "0.10.0", path = "crates/leta-lsp" }
leta-cache = { version = "0.10.0", path = "crates/leta-cache" }
leta-servers = { version = "0.10.0", path = "crates/leta-servers" }
leta-output = { version = "0.10.0", path = "crates/leta-output" }
leta-fs = { version = "0.10.0", path = "crates/leta-fs" }
leta-daemon = { version = "0.10.0", path = "crates/leta-daemon" }

# Async runtime
tokio = { version = "1.40", features = ["full", "fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# File system
walkdir = "2.5"
jwalk = "0.8"
ignore = "0.4"
globset = "0.4"
tempfile = "3.14"

# Parallelism
rayon = "1.10"

# Caching
heed = "0.20"
blake3 = "1.5"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Profiling
fastrace = "0.7"

# Collections
rustc-hash = "2.0"
dashmap = "6.1"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
