[package]
name = "leta-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "This is an internal component crate of leta"
repository.workspace = true
homepage.workspace = true

[dependencies]
fastrace = { workspace = true }
heed = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
