[package]
name = "leta-servers"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fastrace = { workspace = true }
leta-config = { workspace = true }
leta-fs = { workspace = true }
