[package]
name = "leta-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "This is an internal component crate of leta"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = "0.97"
