[package]
name = "leta"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "leta"
path = "src/main.rs"

[dependencies]
leta-types = { workspace = true }
leta-config = { workspace = true }
leta-output = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
glob = "0.3"
libc = "0.2"
