[package]
name = "leta"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "leta"
path = "src/main.rs"

[dependencies]
leta-types = { workspace = true }
leta-config = { workspace = true }
leta-output = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
glob = "0.3"

[features]
default = []
profile = ["tracing", "tracing-subscriber"]

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["fmt", "env-filter"]
optional = true
